--- a/CSS/Eindopdracht/PortFolio/Members.css
+++ b/CSS/Eindopdracht/PortFolio/Members.css
@@ -45,6 +45,7 @@ body{
   
   
   nav ul li{
+      padding-left: 3px;
       margin-top: 2em;
   }
   
@@ -72,6 +73,9 @@ body{
       filter: brightness(150%);
   } 
   
+
+  nav ul li:last-child {
+      color: cornflowerblue;}
 
 
   /* ---------------------Main--------------------- */
@@ -115,12 +119,16 @@ section h1{
       width: 100%;
 }
 
+input{
+      width: 20vw;
+}
+
 .info-container{
 
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin-left:50px; 
+      margin-left:5%; 
       margin-right:auto;
       }
 
@@ -131,29 +139,44 @@ section h1{
 
 @media (max-width: 1024px){
 
-    .checkbtn{
-            display: block;
-            position: sticky;
+
+      .checkbtn{  
+            display:flex;
+            justify-content: flex-end;
+            position: relative;
             top: 20px;
+            /* right: 20px; */
     }
     
-    #check:checked ~ ul{left: 0;}
+    #check:checked ~ ul{
+        left: 0;
+    }
     
     nav ul{
-          height: 50%; 
-          top: 25%;
+          height: 25%; 
+          top: 20%;
           left: -100%;
           text-align: center;
           transition: all .5s;
           border-top-right-radius: 30px ;
           border-bottom-right-radius: 30px ;
+          border: 4px solid white;
           min-height: 60%;
     }
     
     nav li:first-child{display: none;}
     
+    nav ul li:last-child{
+        color:white;
+        padding-top: 25px;
+        font-size: x-large;
+        text-align: center;
+    }
+    
+    
     nav ul li{
           display: block;
+          text-align: left;
           margin-left: -20px;
           line-height: 30px;
     }
@@ -162,9 +185,8 @@ section h1{
     }
     a:hover,a.active{
           background: none;
-          color: #0082e6;   
+          color: ;
      }
-
 
      .gridtable{
       margin-left: 20px;
