--- a/CSS/Eindopdracht/PortFolio/PortFolio.css
+++ b/CSS/Eindopdracht/PortFolio/PortFolio.css
@@ -2,6 +2,7 @@ body{
     padding: 0;
     margin: 0;
     background-color: #fbf8f3;
+    font-size: 17px;
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -104,7 +105,12 @@ main {
     justify-content: center;
     align-items: center;
     text-align: center;
-     width: 50%;
+    margin-left: 5%;
+    width: 50%;
+}
+
+.profiel{
+    padding-top: 25px;
 }
 
 
@@ -137,28 +143,29 @@ hr, .quote {
 /* -------Personal Data------- */
 
 
-table{
-    margin-left: auto;
-    margin-right:auto;
-    margin-top: 5%;
-    table-layout: auto;
-    width: 100%;
-    max-width: 800px;
-    min-width: 350px;
-    font-size: 1.2em; 
-    padding: 20px;
-}
+.data-container{
+    /* max-width: 800px; */
+    min-width: 400px;
+    max-width: 35%;
+    margin-top: 20px;
+    margin-left: 25px;
 
-th{
-    background-color: cornflowerblue;
+}
+.data h2{
+    background: cornflowerblue;
     color: white;
     padding: 10px;
     margin-bottom: 15px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    /* max-width: 35vw; */
 }
 
-td{padding:2px; }
+.data span{
+    margin-right: 1em;
+}
+
+
 
 .yls{color: rgb(238, 203, 46);}
 
@@ -242,7 +249,7 @@ main{
 }
 
 
-
+.profiel-container .banner{padding-top: 20px;}
 .profiel-container .banner img{width: 100%;}
 
 .profiel .profiel-foto img{width: 50%;}
@@ -253,13 +260,11 @@ main{
 /* -------Personal Data------- */
 
 
-
-table{
-        font-size: 1.2em; 
-        padding: 20px;
-     }
-
-.wordcloud img{width: 50%;} 
+.wordcloud img{
+    width: 60%;
+    margin-left: 15%;
+    /* min-width: 250px; */
+} 
 
 
 }
