--- a/CSS/Eindopdracht/PortFolio/PortFolio.css
+++ b/CSS/Eindopdracht/PortFolio/PortFolio.css
@@ -48,6 +48,7 @@ nav li:first-child{
 
 
 nav ul li{
+    padding-left: 3px;
     margin-top: 2em;
 }
 
@@ -60,20 +61,28 @@ ul li a {
     width: 100%;
 }
 
-ul li a:hover {
-    color: white;
-    filter: brightness(150%);
+/* ul li a:hover {
+    background: none;
+    color: rgb(52, 52, 221);
+    filter: brightness(150%); 
 }
 
 ul li a:active{
-    color: red;
+    color: rgb(52, 52, 221);
     filter: brightness(150%);
-}
+} 
 
 ul li a:focus{
     color: whitesmoke;
     filter: brightness(150%);
 } 
+*/
+
+ul a:hover, ul a.active{
+    background: none;
+    color: rgb(52, 52, 221);
+}
+
 
 nav ul li:last-child {
     color: cornflowerblue;}
@@ -229,7 +238,7 @@ nav ul li a{
 }
 a:hover,a.active{
       background: none;
-      color: ;
+      color: rgb(52, 52, 221);
  }
 
 /* -------Main------- */
