--- a/SCSS/1.nesting+variable/main.scss
+++ b/SCSS/1.nesting+variable/main.scss
@@ -18,7 +18,8 @@ font-family: Roboto, sans-serif; text-align: center;
 } 
 
 .banner { 
-font-family: "Pacifico", cursive; height: 400px; 
+font-family: "Pacifico", cursive; 
+height: 400px; 
 background-image: url("lemonade.jpg");
 
     // 1. opdracht 1
