--- a/SCSS/Eindopdracht/Italiaans Restaurant/scss/abstracts/_variables.scss
+++ b/SCSS/Eindopdracht/Italiaans Restaurant/scss/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+
 $primary-color: rgba(194, 177, 82, 0.5);
 $secundairy-color: cornflowerblue;
 
@@ -10,3 +11,13 @@ $secundairy-button-color:none;
 
 $primary-button-color-hover:cornflowerblue;
 $secundairy-button-color-hover: rgba(194, 177, 82, 0.5);;
+
+
+
+/* -----Screen Sizes---- */
+
+$mobile-small: 576px;
+$mobile-medium: 768px;
+$mobile-big: 992px;
+
+
