--- a/SCSS/Eindopdracht/PortFolio/scss-portfolio/layout/_navigation.scss
+++ b/SCSS/Eindopdracht/PortFolio/scss-portfolio/layout/_navigation.scss
@@ -23,6 +23,7 @@ nav ul{
     justify-content: center;
     position: fixed;
     background:$primary-color;
+    box-shadow: 0px 10px 10px;
     list-style-type: none;
     margin: -20px;
     width: 150px;
@@ -59,8 +60,9 @@ nav ul li{
 ul a:hover, ul a.active{
     background: none;
     color: $primary-color;
-    filter: contrast(150%);
+    filter: brightness(70%);
 }
+
 
 
 
@@ -74,15 +76,15 @@ ul a:hover, ul a.active{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80px;
-        height: 80px;
+        width: 40px;
+        height: 40px;
         cursor: pointer;
         transition: all 0.5s ease-in-out;
         /* border: 3px solid cornflowerblue; */
     }
     
     .menu-btn__burger{
-        width: 50px;
+        width: 40px;
         height: 6px;
         background: cornflowerblue;
         border-radius: 5px;
@@ -93,7 +95,7 @@ ul a:hover, ul a.active{
     .menu-btn__burger::before, .menu-btn__burger::after{
         content: '';
         position: absolute;
-        width: 50px;
+        width: 40px;
         height: 6px;
         background: cornflowerblue;
         border-radius: 5px;
@@ -147,7 +149,8 @@ ul a:hover, ul a.active{
           border-top-right-radius: 30px ;
           border-bottom-right-radius: 30px ;
           border: 4px solid white;
-          min-height: 60%;
+          min-height: 70%;
+          box-shadow: 0px 10px 10px;
     }
   
     
@@ -155,18 +158,18 @@ ul a:hover, ul a.active{
           display: block;
           text-align: left;
           margin-left: -20px;
-          line-height: 30px;
+          line-height: 5px;
 
         &:first-child{display: none;}
 
         &:last-child{
             color:white;
-            padding-top: 25px;
+            padding-top: -25px;
             font-size: x-large;
             text-align: center;
         }
 
-        a{font-size: 20px;}
+        a{font-size: 15px;}
     }
    
     a:hover,a.active{
