--- a/SCSS/Eindopdracht/PortFolio/scss-portfolio/layout/_navigation.scss
+++ b/SCSS/Eindopdracht/PortFolio/scss-portfolio/layout/_navigation.scss
@@ -14,7 +14,7 @@
     display: none;
 }
 
-#check{display: none;}
+#check-menu{display: none;}
 
   
 nav ul{
@@ -23,7 +23,7 @@ nav ul{
     justify-content: center;
     position: fixed;
     background:$primary-color;
-    box-shadow: 0px 10px 10px;
+    box-shadow: 2px 0px 6px;
     list-style-type: none;
     margin: -20px;
     width: 150px;
@@ -150,7 +150,7 @@ ul a:hover, ul a.active{
           border-bottom-right-radius: 30px ;
           border: 4px solid white;
           min-height: 70%;
-          box-shadow: 0px 10px 10px;
+        //   box-shadow: -5px -5px -5px;
     }
   
     
