--- a/React/portfolio-elmer-v2/src/components/about/_about.scss
+++ b/React/portfolio-elmer-v2/src/components/about/_about.scss
@@ -1,6 +1,7 @@
 .aboutContainter{
     display: flex;
     justify-content: space-evenly;
+    background-color: ivory;
     flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
@@ -14,10 +15,12 @@
     max-width: 700px;
     text-align: center;
     padding: 50px;
-    margin-top: 5vw;
+    margin-top: auto;
+    margin-bottom: 20%;
     border: 1px solid lightgray;
     box-shadow: 0px 0px 5px gray;
     border-radius: 5vw;
+
 
     img{
     width: 80%;
@@ -45,10 +48,12 @@
     max-width: 800px;
     width: 65vw;
     padding: 70px 50px 100px 50px;
-    margin-top: 5vw;
+    margin-top: auto;
+    margin-bottom: 20%;
     border: 1px solid lightgray;
     box-shadow: 0px 0px 5px gray;
     border-radius: 5vw;
+    background-color: white;
 
     h3{
         padding: 5px 0px;
