--- a/React/portfolio-elmer-v2/src/components/contact/_contact.scss
+++ b/React/portfolio-elmer-v2/src/components/contact/_contact.scss
@@ -6,21 +6,25 @@
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    // max-width: 900px;
-    margin: 8% 0;
-    // margin-left: auto;
-    // margin-right: auto;
+    padding: 50px;
+    padding-top: 8vw;
+    background-color: ivory;
+
+
 
     form{
         display: flex;
         flex-direction: column;
         justify-items: center;
+        background-color: white;
         width: 65vw;
         padding: 20px;
         border: 1px solid lightgray;
         box-shadow: 0px 0px 5px gray;
         border-radius: 5vw;
+        margin: 8% 5%;
 
+        
         .col-sm-10{
             margin-left: auto;
             margin-right: auto;
@@ -74,21 +78,5 @@
         margin-right: auto;
     }
 }
-
-
-.form-group {
-    // display: flex;
-    // justify-content: center;
-
-
-//    width: 75%;
-
-   .col-form-label{
-    //    margin-right: 35px !important;
-       
-   }
-}
-
-
 
 
