--- a/React/portfolio-elmer-v2/src/index.scss
+++ b/React/portfolio-elmer-v2/src/index.scss
@@ -7,14 +7,14 @@
 
 
 
+  @font-face {
+    font-family: "Minisystem";
+    src: url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
+  }
+
 html, body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-}
-
-#root{
-  // display: flex;
-  // flex-direction: column;
-
+  font-family: 'Source Code Pro', monospace;
 }
