--- a/React/portfolio-elmer-v2/src/components/about/_about.scss
+++ b/React/portfolio-elmer-v2/src/components/about/_about.scss
@@ -30,20 +30,77 @@
     margin-bottom: 15px;
     }
 
-    .card-text{
-    font-size: 15px;
-    }
+   
     .card-body{
     width: 85%;
     margin-left: auto;
     margin-right: auto;
+
+        .card-text{
+            font-size: 15px;
+        }
+
+        svg{
+            transform: scale(1.75);
+            filter: contrast(20%);
+        }
+
+        svg:hover{
+            transform: scale(1.75);
+            filter: contrast(100%);
+        }
+
+    }
+
+    p svg{
+        
+        position: absolute;
+        bottom: 50px;
+        right: 50px;
+        // width: 3em;
+        fill: gray;
+        transform: scale(2.5);
+        animation-name: ckw;
+        animation-duration: 3s;
+        /* Things added */
+        animation-iteration-count: infinite;
+        // transform-origin: 50% 50%;
+    
+        
+        @keyframes ckw {
+            0% {transform: scale(2) rotate(360deg);
+            
+            }
+            100% {transform: scale(2) rotate(0deg);
+            }
+        }
+    }
+    
+    p svg:hover{
+    
+        animation-name: ckx;
+        animation-duration: 0s;
+        /* Things added */
+        animation-iteration-count: infinite;
+    
+    
+    @keyframes ckx {
+        0% {transform: scale(2) rotate(0deg);
+        
+        }
+        100% {transform: scale(2) rotate(0deg);
+            
+        }
+     }
+    
     }
 }
-
+    
 
 
 
 .progress-programming{
+    position: relative;
     align-self: center;
     max-width: 800px;
     width: 65vw;
@@ -59,6 +116,7 @@
         padding: 5px 0px;
         color: gray;
         font-style: italic;
+        text-align: center;
     }
 
     h4{
@@ -69,8 +127,51 @@
 
     .progress{
         width: 100%;
-        height: 25px;
+        height: 15px;
         background-color: rgb(219, 219, 219);
         // margin-bottom: 4px;
+    }
+
+    p svg{
+        
+        position: absolute;
+        bottom: 50px;
+        right: 50px;
+        // width: 3em;
+        fill: gray;
+        transform: scale(2.5);
+        animation-name: ckw;
+        animation-duration: 3s;
+        /* Things added */
+        animation-iteration-count: infinite;
+        // transform-origin: 50% 50%;
+    
+        
+        @keyframes ckw {
+            0% {transform: scale(2) rotate(0deg);
+            
+            }
+            100% {transform: scale(2) rotate(360deg);
+            }
+        }
+    }
+    
+    p svg:hover{
+    
+        animation-name: ckx;
+        animation-duration: 0s;
+        /* Things added */
+        animation-iteration-count: infinite;
+    
+    
+    @keyframes ckx {
+        0% {transform: scale(2) rotate(0deg);
+        
+        }
+        100% {transform: scale(2) rotate(0deg);
+            
+        }
+     }
+    
     }
 }
