--- a/React/portfolio-elmer-v2/src/components/banner/_banner.scss
+++ b/React/portfolio-elmer-v2/src/components/banner/_banner.scss
@@ -9,31 +9,30 @@
 
 canvas{
     display: flex;
+    position: fixed;
+    z-index: -2;
     height: 700px;
     width: 100%;
-
-    
+ 
 }
-
-
 
 
 .banner{
-    // background-image: url("../../assets/img/portfolio/elmer-portfolio-banner-1030x500v1.1.jpg");
-    // background-attachment: fixed;
-    // background-position: left;
-    // background-repeat: no-repeat;
-    // background-size: cover;
     min-height: 500px;
 }
 
-
+.titleBanner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 
  h1, h2 {
     margin-left: 2vw;
-    position: absolute;
-    // z-index: 1;
+    position: fixed;
+    z-index: -1;
     color: white;
     top:8vw;
     font-size: 5vw;
